add_subdirectory(codeeditor)
add_subdirectory(colorpalette)
add_subdirectory(colorwidgets)
add_subdirectory(configwidget)
add_subdirectory(curvedtext)
#add_subdirectory(groupingmodel)
add_subdirectory(indicators)
add_subdirectory(itemdelegatedemo)
add_subdirectory(itemviewdemo)
add_subdirectory(messagelog)
add_subdirectory(metainvoke)
add_subdirectory(multiprogress)
#add_subdirectory(objectmapper)
add_subdirectory(objecttree)
add_subdirectory(objectviewer)
add_subdirectory(overlay)
add_subdirectory(overview)
add_subdirectory(qtanimatedwizard)
add_subdirectory(spinboxes)
add_subdirectory(variantmodel)