set(HEADERS  
    src/qtwidgetsextra.h 
    src/painting/qtcolorutils.h 
    src/painting/qtcolorpalette.h 
    src/mainwindow/qtdocktabbar.h 
    src/mainwindow/qtdockwidget.h 
    src/mainwindow/qtdockwidgettitlebar.h 
    src/mainwindow/qtdocksidebar.h 
    src/mainwindow/qtmainwindow.h 
    src/mainwindow/qtwindowmanager.h 
    src/indicators/qtswitchbutton.h 
    src/indicators/qtstateindicator.h 
    src/itemviews/qtitemmodelutility.h 
    src/itemviews/delegates/qtactionitemdelegate.h 
    src/itemviews/delegates/qtcomboboxitemdelegate.h 
    src/itemviews/delegates/qtcompositeitemdelegate.h 
    src/itemviews/delegates/qtcounteritemdelegate.h 
    src/itemviews/delegates/qtprogressitemdelegate.h 
    src/itemviews/delegates/qtrichtextitemdelegate.h 
    src/itemviews/delegates/qtsheetitemdelegate.h 
    src/itemviews/delegates/qtvariantitemdelegate.h 
    src/itemviews/delegates/qtvarianttypedelegate.h 
    src/itemviews/delegates/qtmenuitemdelegate.h 
    src/itemviews/models/qtenumlistmodel.h 
    src/itemviews/models/qttablemodelexporter.h 
    src/itemviews/models/qttablemodelexporterdialog.h 
    src/itemviews/models/qttablemodelexporterfactory.h 
    src/itemviews/models/qttablemodelexporterplugin.h 
    src/itemviews/models/qttextcodecmodel.h 
    src/itemviews/models/qtcolumnproxymodel.h 
    src/itemviews/models/qtcompositeproxymodel.h 
    src/itemviews/models/qtvariantlistmodel.h 
    src/itemviews/models/qtcheckableproxymodel.h 
    src/itemviews/models/qtobjectlistmodel.h 
    src/itemviews/models/qtobjecttreemodel.h 
    src/itemviews/models/qtheaderproxymodel.h 
    src/itemviews/models/qtrowproxymodel.h 
    src/itemviews/models/qtitemfilter.h 
    src/itemviews/views/qtcustomheaderview.h 
    src/itemviews/views/qtitemviewnavigator.h 
    src/itemviews/views/qtitemviewcontroller.h 
    src/itemviews/views/qtrangenavigator.h 
    src/itemviews/views/qtcrumbbar.h 
    src/widgets/qtaboutdialog.h 
    src/widgets/qtcolorbutton.h 
    src/widgets/qtcolorcombobox.h 
    src/widgets/qtcontentview.h 
    src/widgets/qtlineboxedit.h 
    src/widgets/qtnotificationbar.h 
    src/widgets/qtoptionswidget.h 
    src/widgets/qtpathlineedit.h 
    src/widgets/qtshortcutedit.h 
    src/widgets/qtslidecontroller.h 
    src/widgets/qtsplashwidget.h 
    src/widgets/qtsyntaxhighlighter.h 
    src/widgets/qtenums.h 
    src/widgets/qteditdialog.h 
    src/widgets/qthsvrectpicker.h 
    src/widgets/qthsvradialpicker.h 
    src/widgets/qtcolorselector.h 
    src/widgets/qtlongspinbox.h 
    src/widgets/qttextspinbox.h 
    src/widgets/qtcolorgrid.h 
    src/widgets/qtcolorgrid_p.h 
    src/widgets/qtcolortriangle.h 
    src/widgets/qtpatternedit.h 
    src/widgets/qtspanslider.h 
    src/widgets/qtdaterange.h 
    src/widgets/qtdaterangeedit.h 
    src/widgets/qtmultiprogressdialog.h 
    src/widgets/qtplaceholdereffect.h 
    src/widgets/qtprogresseffect.h 
    src/widgets/qtmessagelogview.h 
    src/widgets/qtmessagelogmodel.h 
    src/widgets/qtmessagelogwidget.h 
    src/widgets/qtoverviewwidget.h 
    src/widgets/qtbuttonlocker.h 
    src/widgets/qtslidebutton.h 
    src/widgets/qtslidebutton_p.h 
    src/widgets/qtslidecheckbox.h 
    src/widgets/qtfloatingtoolbutton.h 
    src/widgets/qtsnackbar.h 
    src/widgets/qtcardwidget.h 
    src/itemviews/models/qtrevertibleproxymodel.h 
    src/itemviews/models/qtcachingproxymodel.h 
    src/itemviews/models/qttreeproxymodel.h 
    src/widgets/qtspinboxedit.h 
    src/painting/qtpaintutils.h)


set(SOURCES  
    src/painting/qtcolorutils.cpp 
    src/painting/qtcolorpalette.cpp 
    src/painting/qtcolorpaletteformats.cpp 
    src/mainwindow/qtdocktabbar.cpp 
    src/mainwindow/qtdockwidget.cpp 
    src/mainwindow/qtdockwidgettitlebar.cpp 
    src/mainwindow/qtdocksidebar.cpp 
    src/mainwindow/qtmainwindow.cpp 
    src/mainwindow/qtwindowmanager.cpp 
    src/indicators/qtswitchbutton.cpp 
    src/indicators/qtstateindicator.cpp 
    src/itemviews/delegates/qtactionitemdelegate.cpp 
    src/itemviews/delegates/qtcomboboxitemdelegate.cpp 
    src/itemviews/delegates/qtcompositeitemdelegate.cpp 
    src/itemviews/delegates/qtcounteritemdelegate.cpp 
    src/itemviews/delegates/qtprogressitemdelegate.cpp 
    src/itemviews/delegates/qtrichtextitemdelegate.cpp 
    src/itemviews/delegates/qtsheetitemdelegate.cpp 
    src/itemviews/delegates/qtvariantitemdelegate.cpp 
    src/itemviews/delegates/qtvarianttypedelegate.cpp 
    src/itemviews/delegates/qtmenuitemdelegate.cpp 
    src/itemviews/models/qtenumlistmodel.cpp 
    src/itemviews/models/qtcolumnproxymodel.cpp 
    src/itemviews/models/qttextcodecmodel.cpp 
    src/itemviews/models/qtcompositeproxymodel.cpp 
    src/itemviews/models/qttablemodelexporter.cpp 
    src/itemviews/models/qttablemodelexporterfactory.cpp 
    src/itemviews/models/qttablemodelexporterdialog.cpp 
    src/itemviews/models/qtvariantlistmodel.cpp 
    src/itemviews/models/qtcheckableproxymodel.cpp 
    src/itemviews/models/qtobjectlistmodel.cpp 
    src/itemviews/models/qtobjecttreemodel.cpp 
    src/itemviews/models/qtheaderproxymodel.cpp 
    src/itemviews/models/qtrowproxymodel.cpp 
    src/itemviews/models/qtitemfilter.cpp 
    src/itemviews/views/qtcustomheaderview.cpp 
    src/itemviews/views/qtitemviewnavigator.cpp 
    src/itemviews/views/qtitemviewcontroller.cpp 
    src/itemviews/views/qtrangenavigator.cpp 
    src/itemviews/views/qtcrumbbar.cpp 
    src/widgets/qtaboutdialog.cpp 
    src/widgets/qtcolorbutton.cpp 
    src/widgets/qtcolorcombobox.cpp 
    src/widgets/qtcontentview.cpp 
    src/widgets/qtlineboxedit.cpp 
    src/widgets/qtnotificationbar.cpp 
    src/widgets/qtoptionswidget.cpp 
    src/widgets/qtpathlineedit.cpp 
    src/widgets/qtshortcutedit.cpp 
    src/widgets/qtslidecontroller.cpp 
    src/widgets/qtsplashwidget.cpp 
    src/widgets/qtsyntaxhighlighter.cpp 
    src/widgets/qtenums.cpp 
    src/widgets/qteditdialog.cpp 
    src/widgets/qthsvrectpicker.cpp 
    src/widgets/qthsvradialpicker.cpp 
    src/widgets/qtcolorselector.cpp 
    src/widgets/qtlongspinbox.cpp 
    src/widgets/qttextspinbox.cpp 
    src/widgets/qtcolorgrid.cpp 
    src/widgets/qtcolortriangle.cpp 
    src/widgets/qtpatternedit.cpp 
    src/widgets/qtspanslider.cpp 
    src/widgets/qtdaterange.cpp 
    src/widgets/qtdaterangeedit.cpp 
    src/widgets/qtmultiprogressdialog.cpp 
    src/widgets/qtplaceholdereffect.cpp 
    src/widgets/qtprogresseffect.cpp 
    src/widgets/qtmessagelogview.cpp 
    src/widgets/qtmessagelogmodel.cpp 
    src/widgets/qtmessagelogwidget.cpp 
    src/widgets/qtoverviewwidget.cpp 
    src/widgets/qtbuttonlocker.cpp 
    src/widgets/qtslidebutton.cpp 
    src/widgets/qtslidecheckbox.cpp 
    src/widgets/qtfloatingtoolbutton.cpp 
    src/widgets/qtsnackbar.cpp 
    src/widgets/qtcardwidget.cpp 
    src/itemviews/models/qtrevertibleproxymodel.cpp 
    src/itemviews/models/qtcachingproxymodel.cpp 
    src/itemviews/models/qttreeproxymodel.cpp 
    src/widgets/qtspinboxedit.cpp 
    src/painting/qtpaintutils.cpp)

set(RESOURCES  qtwidgetsextra.qrc)

add_library(qtwidgetsextra
        ${SOURCES}
        ${HEADERS}
        ${RESOURCES}
        )
target_compile_definitions(qtwidgetsextra PRIVATE
        QTWIDGETSEXTRA_MAKEDLL QTWIDGETSEXTRA_BUILD_LIB)
target_include_directories(qtwidgetsextra PUBLIC include )
target_link_libraries(qtwidgetsextra Qt5::Widgets)
